modificacion de carrousel

--- a/index.html
+++ b/index.html
@@ -255,19 +255,19 @@
                 <div class="contenedorpeliculas">
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/"
-                      alt=""
-                    />
-                  </a>
-                  <a href="./error404.html" class="pelicula">
-                    <img
                       src="/img/images/movies/1.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/intothewoods.jpeg"
+                      src="/img/images/movies/2.jpg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/images/movies/3.jpg"
                       alt=""
                     />
                   </a>
@@ -330,37 +330,37 @@
                 <div class="contenedorpeliculas">
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/Avatar.jpeg"
+                      src="/img/images/movies/4.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/axl.jpeg"
+                      src="/img/images/movies/5.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/capitanamerica.jpeg"
+                      src="/img/images/movies/6.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/cazafantasmas.jpeg"
+                      src="/img/images/movies/7.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/dragonheart.jpeg"
+                      src="/img/images/movies/8.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/godzilla.jpeg"
+                      src="/img/images/movies/9.jpg"
                       alt=""
                     />
                   </a>
@@ -370,37 +370,37 @@
                 <div class="contenedorpeliculas">
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/GuardianesdeLaGalaxia.jpeg"
+                      src="/img/images/movies/21.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/Interestelar.jpeg"
+                      src="/img/images/movies/11.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/intothewoods.jpeg"
+                      src="/img/images/movies/12.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/jumanjienlaselva.jpeg"
+                      src="/img/images/movies/13.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/matrix.jpeg"
+                      src="/img/images/movies/14.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/mythica.jpeg"
+                      src="/img/images/movies/15.jpg"
                       alt=""
                     />
                   </a>
@@ -445,37 +445,37 @@
                 <div class="contenedorpeliculas">
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/Avatar.jpeg"
+                      src="/img/images/movies/16.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/axl.jpeg"
+                      src="/img/images/movies/17.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/capitanamerica.jpeg"
+                      src="/img/images/movies/18.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/cazafantasmas.jpeg"
+                      src="/img/images/movies/19.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/dragonheart.jpeg"
+                      src="/img/images/movies/20.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/godzilla.jpeg"
+                      src="/img/images/movies/21.jpg"
                       alt=""
                     />
                   </a>
@@ -485,19 +485,19 @@
                 <div class="contenedorpeliculas">
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/GuardianesdeLaGalaxia.jpeg"
+                      src="/img/images/movies/22.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/Interestelar.jpeg"
+                      src="/img/images/movies/23.jpg"
                       alt=""
                     />
                   </a>
                   <a href="./error404.html" class="pelicula">
                     <img
-                      src="/img/categorias/ciencia_ficcion/intothewoods.jpeg"
+                      src="/img/images/movies/24.jpg"
                       alt=""
                     />
                   </a>
