formulario contacto redirige a 404

--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
       </div>
 
       <!-- Formulario -->
-      <form>
+      <form action="error404.html" method="get">
         <!-- Nombre -->
         <div class="mb-3">
           <label for="nombre" class="form-label text-white">Nombre</label>
