--- a/nosotros.html
+++ b/nosotros.html
@@ -33,10 +33,10 @@
                     <div class="collapse navbar-collapse " id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mx-5 mb-2 mb-lg-0">
                             <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="login.html">Login</a>
+                            <a class="nav-link" aria-current="page" href="login.html">Ingresar</a>
                             </li>
                             <li class="nav-item">
                             <a class="nav-link" href="nosotros.html">Nosotros</a>
