--- a/serie.html
+++ b/serie.html
@@ -43,10 +43,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mx-5 mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="login.html">Login</a>
+                  <a class="nav-link" href="login.html">Ingresar</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="nosotros.html">Nosotros</a>
