cambios footer login por ingresar

--- a/categoria_ciencia_ficcion.html
+++ b/categoria_ciencia_ficcion.html
@@ -327,7 +327,7 @@
             <p class="h5">Acceso</p>
             <div class="mb-2">
               <a class="text-white text-decoration-none" href="login.html"
-                >Login</a
+                >Ingresar</a
               >
             </div>
             <div class="mb-2">
