--- a/nosotros.html
+++ b/nosotros.html
@@ -23,7 +23,7 @@
     <!-- Seccion navbar-->
         <section class=" sticky-top">
 
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-3 mb-2 ">
+            <nav class="navbar navbar-expand-lg navbar-dark p-3 mb-2 ">
                 <div class="container-fluid  ">
                     <img src="img/logoG2.jpeg" alt="Logo" width="70" height="44" class="d-inline-block align-text-top">
                     
