--- a/contacto.html
+++ b/contacto.html
@@ -35,7 +35,7 @@
           <div class="input-group">
           <span class="input-group-text icono-formulario"><i class="fas fa-user"></i></span>
           <input type="text" name="nombre" id="nombre" class="form-control campo-input" placeholder="Nombre" required 
-          pattern="[A-Za-zÁÉÍÓÚáéíóúÑñ\s]+" 
+          pattern="[A-Za-zÁÉÍÓÚáéíóúÑñ\s]+" maxlength="25"
             title="Solo letras y espacios"/>
           </div>
         </div>
@@ -65,6 +65,7 @@
           <button type="submit" class="btn px-4 boton-enviar"> Enviar consulta
              </button>
         </div>
+
       </form>
     </div>
   </div>
