--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                 <div class="col-xs-12 col-md-4 col-lg-3">
                    <p class="h5">Acceso</p>
                     <div class="mb-2">
-                        <a class="text-white text-decoration-none" href="login.html">Login</a>
+                        <a class="text-white text-decoration-none" href="login.html">Ingresar</a>
                     </div>
                     <div class="mb-2">
                         <a class="text-white text-decoration-none" href="registro.html">Registrarse</a>
