arreglando redireccion a contactos

--- a/serie.html
+++ b/serie.html
@@ -259,7 +259,7 @@
               <a href="#"><i class="fa-brands fa-tiktok"></i></a>
             </div>
             <div class="mb-2">
-              <a class="text-white text-decoration-none" href="formulario.html"
+              <a class="text-white text-decoration-none" href="/contacto.html"
                 >Fomulario Contacto</a
               >
             </div>
